--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "build-css": "node ./scripts/built-css"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "@svgr/webpack": "^8.1.0",
+    "axios": "^1.6.7",
     "jsonwebtoken": "^9.0.2",
     "minireset.css": "^0.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
